Fix dark mode bugs
- Placeholder for B&C dialog
- Measurement MenuButton (in toolbar) when using toolbar overflow
- Increment buttons for all scrollbars

--- a/qupath-gui-fx/src/main/resources/css/main.css
+++ b/qupath-gui-fx/src/main/resources/css/main.css
@@ -52,7 +52,7 @@
 }
 
 /* Adapt menu icon colors */
-.menu-item > * > .qupath-icon {
+.qupath-icon {
   -fx-text-fill: -fx-text-base-color;
 }
 
